--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
-#container
-  canvas(height=900, width=1600)
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Ninja Canvas App</title>
+  <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
+</head>
+<body>
+
+  <!-- Container for the canvas -->
+  <div id="container">
+    <canvas id="gameCanvas" height="900" width="1600">
+      Your browser does not support HTML5 Canvas.
+    </canvas>
+  </div>
+
+  <script src="script.js"></script> <!-- Link to external JavaScript -->
+</body>
+</html>
